# WordCount-OneAPI

./: .gitignore  CMakeLists.txt  HowTo.md  README.md
Screenshots/: SamWordCountOneAPIOutput.txt
include/: hash.h  util.h
src/: CMakeLists.txt  run.cpp
src/util/: file_to_set.cpp  hash.cpp  util.cpp
